Bug 307427 - Kaddressbook crashes on add to favourite
Summary: Kaddressbook crashes on add to favourite
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-26 08:56 UTC by Andy Goss
Modified: 2012-09-26 12:25 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andy Goss 2012-09-26 08:56:32 UTC
Application: kaddressbook (4.8.5)
KDE Platform Version: 4.8.5 (4.8.5)
Qt Version: 4.8.1
Operating System: Linux 3.2.0-31-generic-pae i686
Distribution: Netrunner Dryland Second Edition

-- Information about the crash:
- What I was doing when the application crashed:
I clicked on "add to favourite", to find out what it did, and the app crashes immediately, and does so every time.

The crash can be reproduced every time.

-- Backtrace:
Application: KAddressBook (kaddressbook), signal: Segmentation fault
Using host libthread_db library "/lib/i386-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0xb3a14980 (LWP 5801))]

Thread 2 (Thread 0xb0aefb40 (LWP 5804)):
#0  0xb4ee1dcd in clock_gettime () from /lib/i386-linux-gnu/librt.so.1
#1  0xb6223315 in do_gettime (frac=0xb0aeefb0, sec=0xb0aeefa8) at tools/qelapsedtimer_unix.cpp:123
#2  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#3  0xb630d226 in QTimerInfoList::updateCurrentTime (this=0xb0102074) at kernel/qeventdispatcher_unix.cpp:343
#4  0xb630d57a in QTimerInfoList::timerWait (this=0xb0102074, tm=...) at kernel/qeventdispatcher_unix.cpp:450
#5  0xb630be23 in timerSourcePrepareHelper (src=<optimized out>, timeout=0xb0aef0bc) at kernel/qeventdispatcher_glib.cpp:136
#6  0xb630bebd in timerSourcePrepare (source=0xb0102040, timeout=<optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#7  0xb50bd872 in g_main_context_prepare () from /lib/i386-linux-gnu/libglib-2.0.so.0
#8  0xb50bdfaf in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#9  0xb50be201 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#10 0xb630c8e7 in QEventDispatcherGlib::processEvents (this=0xb0100468, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#11 0xb62d850d in QEventLoop::processEvents (this=0xb0aef240, flags=...) at kernel/qeventloop.cpp:149
#12 0xb62d87a9 in QEventLoop::exec (this=0xb0aef240, flags=...) at kernel/qeventloop.cpp:204
#13 0xb61c194c in QThread::exec (this=0x8680a78) at thread/qthread.cpp:501
#14 0xb62b5b5d in QInotifyFileSystemWatcherEngine::run (this=0x8680a78) at io/qfilesystemwatcher_inotify.cpp:248
#15 0xb61c4de0 in QThreadPrivate::start (arg=0x8680a78) at thread/qthread_unix.cpp:298
#16 0xb54ced4c in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#17 0xb5f9eace in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 1 (Thread 0xb3a14980 (LWP 5801)):
[KCrash Handler]
#7  Akonadi::FavoriteCollectionsModel::addCollection (this=0x0, collection=...) at ../../akonadi/favoritecollectionsmodel.cpp:156
#8  0xb58386e7 in Akonadi::StandardActionManager::Private::slotAddToFavorites (this=0x8559170) at ../../akonadi/standardactionmanager.cpp:886
#9  0xb582efc3 in Akonadi::StandardActionManager::qt_static_metacall (_o=0x8554098, _c=QMetaObject::InvokeMetaMethod, _id=25, _a=0xbf85dac8) at ./standardactionmanager.moc:168
#10 0xb62f06b1 in QMetaObject::activate (sender=0x8582048, m=0xb71bd3f8, local_signal_index=1, argv=0xbf85dac8) at kernel/qobject.cpp:3547
#11 0xb683e9bd in QAction::triggered (this=0x8582048, _t1=false) at .moc/release-shared/moc_qaction.cpp:277
#12 0xb683ec5b in QAction::activate (this=0x8582048, event=QAction::Trigger) at kernel/qaction.cpp:1257
#13 0xb6d4b410 in trigger (this=<optimized out>) at ../../include/QtGui/../../src/gui/kernel/qaction.h:218
#14 QToolButton::nextCheckState (this=0x85df8a0) at widgets/qtoolbutton.cpp:1144
#15 0xb6c72c57 in QAbstractButtonPrivate::click (this=0x85dfab8) at widgets/qabstractbutton.cpp:530
#16 0xb6c72f56 in QAbstractButton::mouseReleaseEvent (this=0x85df8a0, e=0xbf85e1c4) at widgets/qabstractbutton.cpp:1123
#17 0xb6d4b4ad in QToolButton::mouseReleaseEvent (this=0x85df8a0, e=0xbf85e1c4) at widgets/qtoolbutton.cpp:718
#18 0xb68a01ac in QWidget::event (this=0x85df8a0, event=0xbf85e1c4) at kernel/qwidget.cpp:8362
#19 0xb6c721f9 in QAbstractButton::event (this=0x85df8a0, e=0xbf85e1c4) at widgets/qabstractbutton.cpp:1082
#20 0xb6d4cbdc in QToolButton::event (this=0x85df8a0, event=0xbf85e1c4) at widgets/qtoolbutton.cpp:1160
#21 0xb6845ed4 in notify_helper (e=0xbf85e1c4, receiver=0x85df8a0, this=0x83f96e8) at kernel/qapplication.cpp:4559
#22 QApplicationPrivate::notify_helper (this=0x83f96e8, receiver=0x85df8a0, e=0xbf85e1c4) at kernel/qapplication.cpp:4531
#23 0xb684c024 in QApplication::notify (this=0x83f96e8, receiver=0x85df8a0, e=0xbf85e1c4) at kernel/qapplication.cpp:4102
#24 0xb7452e01 in KApplication::notify (this=0xbf85e9e4, receiver=0x85df8a0, event=0xbf85e1c4) at ../../kdeui/kernel/kapplication.cpp:311
#25 0xb62d997e in QCoreApplication::notifyInternal (this=0xbf85e9e4, receiver=0x85df8a0, event=0xbf85e1c4) at kernel/qcoreapplication.cpp:876
#26 0xb6846e95 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#27 QApplicationPrivate::sendMouseEvent (receiver=0x85df8a0, event=0xbf85e1c4, alienWidget=0x85df8a0, nativeWidget=0x85cf2b8, buttonDown=0xb71dacf4, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3170
#28 0xb68d3074 in QETWidget::translateMouseEvent (this=0x85cf2b8, event=0xbf85e67c) at kernel/qapplication_x11.cpp:4617
#29 0xb68d1c0d in QApplication::x11ProcessEvent (this=0xbf85e9e4, event=0xbf85e67c) at kernel/qapplication_x11.cpp:3732
#30 0xb68feeac in x11EventSourceDispatch (s=0x83f9378, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#31 0xb50bdd86 in g_main_context_dispatch () from /lib/i386-linux-gnu/libglib-2.0.so.0
#32 0xb50be125 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#33 0xb50be201 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#34 0xb630c887 in QEventDispatcherGlib::processEvents (this=0x83d3818, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#35 0xb68feaaa in QGuiEventDispatcherGlib::processEvents (this=0x83d3818, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#36 0xb62d850d in QEventLoop::processEvents (this=0xbf85e974, flags=...) at kernel/qeventloop.cpp:149
#37 0xb62d87a9 in QEventLoop::exec (this=0xbf85e974, flags=...) at kernel/qeventloop.cpp:204
#38 0xb62ddeba in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1148
#39 0xb6843a74 in QApplication::exec () at kernel/qapplication.cpp:3820
#40 0x0804bc54 in main (argc=1, argv=0xbf85ead4) at ../../kaddressbook/main.cpp:52

Reported using DrKonqi
Comment 1 Laurent Montel 2012-09-26 11:56:14 UTC
Git commit dd0473a08b288b42696b532ab270e9bfa61de3d1 by Montel Laurent.
Committed on 26/09/2012 at 13:55.
Pushed by mlaurent into branch 'KDE/4.9'.

Start to fix Bug 307427 - Kaddressbook crashes on add to favourite

M  +114  -62   akonadi/contact/standardcontactactionmanager.cpp

http://commits.kde.org/kdepimlibs/dd0473a08b288b42696b532ab270e9bfa61de3d1
Comment 2 Laurent Montel 2012-09-26 12:00:05 UTC
Git commit cf1f67bd2e6fe9d245295b43f64f9c3e8997932c by Montel Laurent.
Committed on 26/09/2012 at 13:59.
Pushed by mlaurent into branch 'KDE/4.9'.

Fix Bug 307427 - Kaddressbook crashes on add to favourite

FIXED-IN: 4.9.2

M  +32   -1    kaddressbook/mainwidget.cpp

http://commits.kde.org/kdepim/cf1f67bd2e6fe9d245295b43f64f9c3e8997932c