Fix Bug 307427 - Kaddressbook crashes on add to favourite

FIXED-IN: 4.9.2
BUG: 307427